--- a/Src/ExStudentAddInTest/ExStudentAddInTest.csproj
+++ b/Src/ExStudentAddInTest/ExStudentAddInTest.csproj
@@ -46,6 +46,7 @@
   <ItemGroup>
     <Compile Include="SheetHelperTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SheetInfoTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExStudentAddIn\ExStudentAddIn.csproj">
