--- a/Src/ExStudentAddIn/ExStudentAddIn.csproj
+++ b/Src/ExStudentAddIn/ExStudentAddIn.csproj
@@ -77,6 +77,7 @@
     <Compile Include="AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="CellInfo.cs" />
     <Compile Include="Connect.cs">
       <SubType>Code</SubType>
     </Compile>
